--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # можно запустить вручную
+  workflow_dispatch:           # ← позволяет запускать вручную из интерфейса
 
 jobs:
   install:
@@ -22,7 +22,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: $$   {{ runner.os }}-pip-   $${{ hashFiles('app/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('app/requirements.txt') }}
           restore-keys: ${{ runner.os }}-pip-
 
       - name: Install dependencies
@@ -30,51 +30,43 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r app/requirements.txt
 
-lint:
-  runs-on: ubuntu-latest
-  needs: install
-  steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-    - name: Install dependencies (for lint)
-      run: pip install -r app/requirements.txt pylint
-    - name: Lint code (relaxed)
-      run: pylint --disable=all --enable=import-error app/main.py || true   # || true — не фейлить workflow
-
-test:
-  runs-on: ubuntu-latest
-  needs: install
-  services:
-    redis:
-      image: redis:7-alpine
-      ports:
-        - 6379:6379
-      options: >-
-        --health-cmd "redis-cli ping"
-        --health-interval 10s
-        --health-timeout 5s
-        --health-retries 5
-  steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-    - name: Install test dependencies
-      run: pip install pytest httpx
-    - name: Run tests (allow no tests)
-      run: pytest app/ --ignore= || true   # || true — не падать, если тестов 0
-      env:
-        REDIS_HOST: localhost
+  lint:
+    runs-on: ubuntu-latest
+    needs: install
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - run: pip install pytest httpx
-      - name: Run tests (if any)
-        run: pytest app/
+      - name: Install dependencies for lint
+        run: |
+          pip install pylint
+          pip install -r app/requirements.txt   # чтобы видел импорты fastapi, redis и т.д.
+      - name: Lint code (relaxed)
+        run: pylint --disable=all --enable=import-error,unused-import app/main.py || true
+
+  test:
+    runs-on: ubuntu-latest
+    needs: install
+    services:
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - name: Install test dependencies
+        run: pip install pytest httpx
+      - name: Run tests (allow no tests)
+        run: pytest app/ || true
         env:
           REDIS_HOST: localhost
 
@@ -99,4 +91,4 @@ test:
           push: true
           tags: |
             ghcr.io/${{ github.repository }}:latest
-            ghcr.io/$$   {{ github.repository }}:   $${{ github.sha }}
+            ghcr.io/${{ github.repository }}:${{ github.sha }}
