--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,7 +5,11 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:           # ← позволяет запускать вручную из интерфейса
+  workflow_dispatch:           # позволяет запускать вручную
+
+permissions:
+  contents: read
+  packages: write              
 
 jobs:
   install:
@@ -41,7 +45,7 @@ jobs:
       - name: Install dependencies for lint
         run: |
           pip install pylint
-          pip install -r app/requirements.txt   # чтобы видел импорты fastapi, redis и т.д.
+          pip install -r app/requirements.txt
       - name: Lint code (relaxed)
         run: pylint --disable=all --enable=import-error,unused-import app/main.py || true
 
